Dodata kontakt forma

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,8 +8,9 @@ body
     margin-bottom: 130px;
     background-image : url('../images/site/bg.jpg');
     background-position: center;
-    background-repeat: no-repeat;
+   
     background-size: cover;     
+    height: 100%;
     
 }
 
