--- a/views/index.ejs
+++ b/views/index.ejs
@@ -70,6 +70,7 @@
                       
                     <a class="nav-item nav-link active" href="/">Početna</a>
                     <a class="nav-item nav-link " href="/o_nama">O nama</a>
+                    <a class="nav-item nav-link " href="/kontakt">Kontakt</a>
                     <!--  Deo koji gost vidi  -->
                     <% if(!ulogovaniKorisnik) { %>
                     <a class="nav-item nav-link" href="/logIn">Prijavi se</a>
@@ -231,7 +232,7 @@
                                     </h6>
                                     <hr style="background-color: rgb(0, 0, 0);">
                                   <h6 class="card-subtitle mb-2 text-muted small">
-                                      <%-posao.datum%><br>
+                                     
                                       Br prijava : <span class="text-warning"><%-posao.br_prijava%></span>
                                 
                                   </h6>
