--- a/views/kategorije/sve_kategorije.ejs
+++ b/views/kategorije/sve_kategorije.ejs
@@ -36,6 +36,7 @@
                       
                     <a class="nav-item nav-link" href="/">Početna</a>
                     <a class="nav-item nav-link " href="/o_nama">O nama</a>
+                    <a class="nav-item nav-link " href="/kontakt">Kontakt</a>
                     <!--  Deo koji gost vidi  -->
                     <% if(!ulogovaniKorisnik) { %>
                     <a class="nav-item nav-link" href="/logIn">Prijavi se</a>
@@ -191,7 +192,7 @@
             <!-- Kolona -->
             <div class="col-lg-4 col-sm-6 mt-1 mb-3 ">
                 <!-- Kartica za kategoriju-->
-                <div class="card" style="width: 20rem; background-color: rgb(61, 61, 61); box-shadow: none; border: 1px solid rgba(98, 0, 255, 0.301);">
+                <div class="card" style="width: 20rem; background-color: rgba(61, 61, 61, 0.678); box-shadow: none; border: 1px solid rgba(98, 0, 255, 0);">
                     <!-- Slika kategorije -->
                     <img class="card-img-top " src="/images/site/category.jpg" alt="Card image cap">
                     <!-- Sadrzaj kartice-->
