--- a/views/log_reg/registracija.ejs
+++ b/views/log_reg/registracija.ejs
@@ -37,6 +37,7 @@
                     
                     <a class="nav-item nav-link" href="/">Početna</a>
                     <a class="nav-item nav-link " href="/o_nama">O nama</a>
+                    <a class="nav-item nav-link " href="/kontakt">Kontakt</a>
                     <!--  Deo koji gost vidi  -->
                    
                     <a class="nav-item nav-link " href="/logIn">Prijavi se</a>
