--- a/views/log_reg/login.ejs
+++ b/views/log_reg/login.ejs
@@ -39,6 +39,7 @@
                     
                     <a class="nav-item nav-link" href="/">Početna</a>
                     <a class="nav-item nav-link " href="/o_nama">O nama</a>
+                    <a class="nav-item nav-link " href="/kontakt">Kontakt</a>
                     <!--  Deo koji gost vidi  -->
                    
                     <a class="nav-item nav-link active" href="/logIn">Prijavi se</a>
