--- a/views/poslovi/novi_posao.ejs
+++ b/views/poslovi/novi_posao.ejs
@@ -35,6 +35,7 @@
                       
                     <a class="nav-item nav-link active" href="/">Početna</a>
                     <a class="nav-item nav-link " href="/o_nama">O nama</a>
+                    <a class="nav-item nav-link " href="/kontakt">Kontakt</a>
                     <!--  Deo koji gost vidi  -->
                     <% if(!ulogovaniKorisnik) { %>
                     <a class="nav-item nav-link" href="/logIn">Prijavi se</a>
