Dodato obavestenje caps-lock-a kod logIn-a

--- a/views/log_reg/login.ejs
+++ b/views/log_reg/login.ejs
@@ -109,7 +109,7 @@
 
 
             <!-- Lozinka -->
-                <label>Lozinka</label>
+                <label>Lozinka</label> <span class="text-danger small" id = 'capsObavestenje' style="visibility: hidden;">(Caps-lock uključen)</span>
                 <input type="password" class="form-control center-style" name = 'lozinka' id ='logInLozinka'
                 <% if(greska.textLozinka != ''){%>
                     value = '<%-greska.lozinka%>' 
