--- a/views/korisnici/svi_korisnici.ejs
+++ b/views/korisnici/svi_korisnici.ejs
@@ -103,9 +103,12 @@
 
 
 
+
+    <!-- Naslov-->
     <div class="container text-center"> <b class="h2"> Svi korisnici </b> </div>
     <hr class="container" style="background-color: rgb(0, 25, 134);">
     <div class="container mb-3 mt-2">Ukupno korisnika : <b><%-ukupno%></b></div>
+    <!-- /Naslov-->
 
 
     <!-- Izlistavanje svih korisnika -->
@@ -121,10 +124,13 @@
                 <!-- Podaci za prikaz -->
                   <tr>
                    
-                    <th scope="col"><i class="fas fa-user"></i></i></th>
+                    <th scope="col"><i class="fas fa-user text-warning"></i></i></th>
                     <th scope="col">Ime i prezime</th>
                     <th scope="col">Broj oglasa na koje se prijavio</th>
                     <th scope="col">Broj oglasa koje je postavio</th>
+                    <% if (ulogovaniKorisnik. rola == 'admin'){%>
+                      <th>Rola</th>
+                    <% } %>
                   </tr>
                 <!-- /Podaci za prikaz -->
               
@@ -144,7 +150,51 @@
                     <td><a href = '/svi_korisnici/profil/<%-korisnik.id%>'><%-korisnik.ime%> <%-korisnik.prezime%></a></td>
                     <td><%-korisnik.br_prijavljenih%></td>
                     <td><%-korisnik.br_postavljenih%></td>
-                  </tr>
+                    <!-- Dodavanje admina -->
+                      <% if(ulogovaniKorisnik.rola == 'admin'){ %>
+                        <td>
+                          <% if(ulogovaniKorisnik.id != korisnik.id) {%>  
+                            <form action="/svi_korisnici/profil/<%-korisnik.id%>/rola" method="POST">
+                                <button class="btn" type="button" data-toggle="modal" data-target="#promeniRolu<%-korisnik.id%>">
+                                  <span
+                                   <% if (korisnik.rola == 'admin'){%> class='text-success' <% } else {%> class='text-light'  <%}%>>
+                                    <%-korisnik.rola%> <span class="text-info "><i class="fas fa-user-edit "></i></span>
+                                  </span>
+                                </button>
+                                <!-- Modal za promenu role -->
+                                          <div class="modal fade" id="promeniRolu<%-korisnik.id%>" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                                            <div class="modal-dialog modal-dialog-centered" role="document">
+                                              <div class="modal-content bg-dark">
+                                                <div class="modal-header">
+                                                  <h5 class="modal-title" id="exampleModalLongTitle">Promena role</h5>
+                                                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                    <span aria-hidden="true">&times;</span>
+                                                  </button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    Sigurni li ste da želite da promenite rolu korisnika : <span class="text-warning"><%-korisnik.ime%></span>
+                                                </div>
+                                                <div class="modal-footer">
+                                                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Otkaži</button>
+                                                  <button type="submit" class="btn btn-primary">Potvrdi</button>
+                                                </div>
+                                              </div>
+                                            </div>
+                                          </div>
+                                <!-- /Modal za promenu role -->
+
+
+
+                            </form>
+                            
+                            <% } else {%>
+                              <span class="text-warning btn"><i class="fas fa-user-shield"></i></span>
+                            <% } %>
+                        </td>
+                      <% } %>
+                    </tr>
+                  
+                  <!-- Dodavanje admina -->
                 <!-- /Podaci o korisniku-->
 
                
