--- a/views/index.ejs
+++ b/views/index.ejs
@@ -218,33 +218,101 @@
                 <!-- Red sa poslovima-->
                 <div class="row m-4">
 
-                    <!-- @Izlistavanje poslova -->
-                        <% for(posao of poslovi){ %>
-                        <div class="col-lg-4 col-sm-12 mb-3 mt-3 justify-content-center d-flex" 
-                        style="cursor: pointer;" 
-                        onclick="window.location.href = '/svi_poslovi/posao/<%-posao.id%>'"
-                        >
-                            <div class="card bg-dark posao-card " style="width: 23rem; min-height: 13rem;">
-                                <div class="card-body">
-                                    <h6 class="card-title" style="color: rgb(0, 152, 169);">
-                                        <i class="far fa-file-code" style="font-size: 20px; color: rgb(255, 230, 0);"></i>
-                                        <%-posao.naziv%>
-                                    </h6>
-                                    <hr style="background-color: rgb(0, 0, 0);">
-                                  <h6 class="card-subtitle mb-2 text-muted small">
-                                     
-                                      Br prijava : <span class="text-warning"><%-posao.br_prijava%></span>
-                                
-                                  </h6>
-                                  <p class="card-text">
-                                      <%-posao.kratak_opis%>...   </p>
+                    <!-- @Izlistavanje 3 najaktuelnija posla poslova -->
+                      
+
+                    <!-- Posao mesto 2-->
+                    <div class="col-lg-4 col-sm-12 mb-3 mt-5 justify-content-center d-flex" 
+                    style="cursor: pointer;" 
+                    onclick="window.location.href = '/svi_poslovi/posao/<%-poslovi[1].id%>'"
+                    >
+                        <div class="card bg-dark  " style="width: 23rem; min-height: 13rem; box-shadow: 10px 20px 10px rgba(0, 0, 0, 0.418)">
+                            <div class="card-body">
+                                <h6 class="card-title" style="color: rgb(0, 152, 169);">
+                                    <i class="far fa-file-code" style="font-size: 20px; color: rgb(255, 230, 0);"></i>
+                                    <%-poslovi[1].naziv%>
+                                </h6>
+                                <hr style="background-color: rgb(0, 0, 0);">
+                              <h6 class="card-subtitle mb-2 text-muted small">
+                                 
+                                  Br prijava : <span class="text-warning"><%-poslovi[1].br_prijava%></span>
+                            
+                              </h6>
+                              <p class="card-text">
+                                  <%-poslovi[1].kratak_opis%>...   </p>
+                              
+                             
+                            
+                            </div>
+                          </div>
+                    </div>
+                    <!-- Posao mesto 2-->
+
+
+                         <!-- Posao mesto 1-->
+                         <div class="col-lg-4 col-sm-12 mb-3 mt-3 justify-content-center d-flex" 
+                         style="cursor: pointer;" 
+                         onclick="window.location.href = '/svi_poslovi/posao/<%-poslovi[0].id%>'"
+                         >
+                             <div class="card bg-dark" style=" width: 23rem; min-height: 17rem; box-shadow: 20px 30px 10px rgba(0, 0, 0, 0.438);">
+                                 <div class="card-body">
+                                     <h6 class="card-title" style="color: rgb(0, 152, 169);">
+                                         <i class="far fa-file-code" style="font-size: 20px; color: rgb(255, 230, 0);"></i>
+                                         <%-poslovi[0].naziv%>
+                                     </h6>
+                                     <hr style="background-color: rgb(0, 0, 0);">
+                                   <h6 class="card-subtitle mb-2 text-muted small">
+                                      
+                                       Br prijava : <span class="text-warning"><%-poslovi[0].br_prijava%></span>
+                                 
+                                   </h6>
+                                   <p class="card-text">
+                                       <%-poslovi[0].kratak_opis%>...   </p>
+                                   
                                   
                                  
-                                
-                                </div>
-                              </div>
-                        </div>
-                        <%}%>
+                                 </div>
+                               </div>
+                         </div>
+                         <!-- Posao mesto 1-->
+
+
+                           <!-- Posao mesto 3-->
+                           <div class="col-lg-4 col-sm-12 mb-3 mt-5 justify-content-center d-flex" 
+                           style="cursor: pointer;" 
+                           onclick="window.location.href = '/svi_poslovi/posao/<%-poslovi[2].id%>'"
+                           >
+                               <div class="card bg-dark " style=" width: 23rem; min-height: 13rem; box-shadow: 10px 20px 10px rgba(0, 0, 0, 0.418)">
+                                   <div class="card-body">
+                                       <h6 class="card-title" style="color: rgb(0, 152, 169);">
+                                           <i class="far fa-file-code" style="font-size: 20px; color: rgb(255, 230, 0);"></i>
+                                           <%-poslovi[2].naziv%>
+                                       </h6>
+                                       <hr style="background-color: rgb(0, 0, 0);">
+                                     <h6 class="card-subtitle mb-2 text-muted small">
+                                        
+                                         Br prijava : <span class="text-warning"><%-poslovi[2].br_prijava%></span>
+                                   
+                                     </h6>
+                                     <p class="card-text">
+                                         <%-poslovi[2].kratak_opis%>...   </p>
+                                     
+                                    
+                                   
+                                   </div>
+                                 </div>
+                           </div>
+                           <!-- Posao mesto 3-->
+
+
+
+
+
+
+
+
+
+
                     <!-- /@Izlistavanje poslova-->    
                     
                     
