Zakrpljene manje greske na ruti profil

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -226,7 +226,7 @@
                         style="cursor: pointer;" 
                         onclick="window.location.href = '/svi_poslovi/posao/<%-poslovi[1].id%>'"
                         >
-                            <div class="card bg-dark  " style="width: 23rem; min-height: 13rem; box-shadow: 10px 20px 10px rgba(0, 0, 0, 0.418)">
+                            <div class="card bg-dark  " style="width: 23rem; min-height: 13rem;">
                                 <div class="card-body">
                                     <h6 class="card-title" style="color: rgb(0, 152, 169);">
                                         <i class="far fa-file-code" style="font-size: 20px; color: rgb(255, 230, 0);"></i>
@@ -255,7 +255,7 @@
                          style="cursor: pointer;" 
                          onclick="window.location.href = '/svi_poslovi/posao/<%-poslovi[0].id%>'"
                          >
-                             <div class="card bg-dark" style=" width: 23rem; min-height: 17rem; box-shadow: 20px 30px 10px rgba(0, 0, 0, 0.438);">
+                             <div class="card bg-dark" style=" width: 23rem; min-height: 17rem;">
                                  <div class="card-body">
                                      <h6 class="card-title" style="color: rgb(0, 152, 169);">
                                          <i class="far fa-file-code" style="font-size: 20px; color: rgb(255, 230, 0);"></i>
@@ -284,7 +284,7 @@
                            style="cursor: pointer;" 
                            onclick="window.location.href = '/svi_poslovi/posao/<%-poslovi[2].id%>'"
                            >
-                               <div class="card bg-dark " style=" width: 23rem; min-height: 13rem; box-shadow: 10px 20px 10px rgba(0, 0, 0, 0.418)">
+                               <div class="card bg-dark " style=" width: 23rem; min-height: 13rem;  ">
                                    <div class="card-body">
                                        <h6 class="card-title" style="color: rgb(0, 152, 169);">
                                            <i class="far fa-file-code" style="font-size: 20px; color: rgb(255, 230, 0);"></i>
