--- a/views/poslovi/novi_posao.ejs
+++ b/views/poslovi/novi_posao.ejs
@@ -137,7 +137,7 @@
                 name = 'kratakOpis' 
                 required maxlength="150"><%if (greska != ''){%><%-greska.kratakOpis%><%}%></textarea>
                 <!-- Pun opis -->
-                <label>*Pun opis posla</label>
+                <label>*Pun opis posla : </label>
                 <textarea class="form-control center-style" style="height: 250px;" 
                 name = 'punOpis' required><%if(greska!=''){%><%-greska.punOpis%><%}%></textarea>
                 <!-- Potrebne veštine -->
