--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,7 +9,8 @@ body
     background-image : url('../images/site/bg.jpg');
     background-size: cover;     
     height: 100%;
-    
+    background-repeat: no-repeat;
+    background-attachment:  scroll;
 }
 
 
