--- a/views/kategorije/sve_kategorije.ejs
+++ b/views/kategorije/sve_kategorije.ejs
@@ -190,7 +190,7 @@
         <div class="row">
             <% for(kategorija of kategorije) {%>
             <!-- Kolona -->
-            <div class="col-lg-4 col-sm-6 mt-1 mb-3 ">
+            <div class="col-lg-4 col-sm-6 mt-1 mb-3 justify-content-center d-flex">
                 <!-- Kartica za kategoriju-->
                 <div class="card" style="width: 20rem; background-color: rgba(51, 51, 51, 0.562); box-shadow: none; border: 1px solid rgba(233, 0, 0, 0.068);">
                     <!-- Slika kategorije -->
