Dodata mogucnost prikaza broja poslova na stranicama

--- a/views/kategorije/kategorija.ejs
+++ b/views/kategorije/kategorija.ejs
@@ -246,7 +246,7 @@
     <!-- Prikaz broja oglasa-->
     <div class="container">
         <span class ='ml-4 mb-3'> 
-            Ukupno oglasa :  <b> <%-ukupnoPoslova%></b> 
+            Prikazani oglasi :  <b><%-poslovi.length%></b> / <%-ukupnoPoslova%> 
         </span> 
     </div>
     <!-- /Prikaz broja oglasa -->
