--- a/views/poslovi/svi_poslovi.ejs
+++ b/views/poslovi/svi_poslovi.ejs
@@ -191,7 +191,16 @@
     </div>
 
     <!-- Broj prikazanih i ukupno oglasa -->
-    <div class="container"><p class="ml-4">Ukupno oglasa : <b><%-ukupnoPoslova%></b></p></div>
+    <div class="container">
+        <p class="ml-4">
+        Prikazani oglasi : <b><%-poslovi.length%></b> / <%-ukupnoPoslova%>
+            
+           
+        </p>
+        <p class="ml-4">
+         
+        </p>
+    </div>
 
     <!-- /Broj prikazanih i ukupno oglasa-->
 
