--- a/views/poslovi/posao.ejs
+++ b/views/poslovi/posao.ejs
@@ -143,7 +143,7 @@
                     <!-- Kartica -->
                     <div class="card text-left bg-dark ">
                         <!-- Naziv oglasa -->
-                        <div class = 'text-center h4'><> <spna class="text-success"><%-posao[0].naziv%></spna> <> </div>
+                        <div class = 'text-center h4'><> <spna class="text-info"><%-posao[0].naziv%></spna> <> </div>
                         
                         <!-- Korisnik koji je postavio i datum postavljanja-->
                         <div class="card-header" >
